Change tabs names

--- a/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
+++ b/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
@@ -52,9 +52,9 @@
         </StatusBar>
         
         <TabControl DockPanel.Dock="Top" SelectedIndex="2">
-            <TabItem  Header="Add meals"></TabItem>
-            <TabItem  Header="Today statistics"></TabItem>
-            <TabItem  Header="All statistics">
+            <TabItem  Header="Today"></TabItem>
+            <TabItem  Header="Your Products"></TabItem>
+            <TabItem  Header="All Statistics">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="250"/>
