--- a/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
+++ b/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
@@ -66,13 +66,14 @@
                     <GroupBox Header="Your Dishes" Grid.Column="0" Grid.Row="1">
                         <DockPanel>
                             <DockPanel DockPanel.Dock="Top">
-                                <TextBox Text="Search" IsReadOnly="True"/>
-                                <TextBox />
+                                <Button Content="Search" />
+                                <TextBox/>
                             </DockPanel>
                             <ListBox 
-                                 ItemsSource="{Binding Products}"
+                                SelectedIndex="0"
+                                 ItemsSource="{Binding Dishes}"
                                  DisplayMemberPath="Name"
-                                 SelectedItem="{Binding SelectedProduct}">
+                                 SelectedItem="{Binding SelectedDish}">
                             </ListBox>
                         </DockPanel>
                     </GroupBox>
