--- a/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
+++ b/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
@@ -80,29 +80,30 @@
                             </Grid.RowDefinitions>
                             <TextBlock Text="Name: "
                                        Grid.Column="0" Grid.Row="0"/>
-                            <TextBox 
+                            <TextBox Text="{Binding NewDishName, UpdateSourceTrigger=PropertyChanged}"
                                 Grid.Column="1" Grid.Row="0"/>
                             <TextBlock Text="Calories: "
                                        Grid.Column="0" Grid.Row="1"/>
-                            <TextBox 
+                            <TextBox Text="{Binding NewDishCalories, UpdateSourceTrigger=PropertyChanged}"
                                 Grid.Column="1" Grid.Row="1"/>
                             <TextBlock Text="Proteins: "
                                        Grid.Column="0" Grid.Row="2"/>
-                            <TextBox 
+                            <TextBox Text="{Binding NewDishProteins, UpdateSourceTrigger=PropertyChanged}"
                                 Grid.Column="1" Grid.Row="2"/>
                             <TextBlock Text="Fats: "
                                        Grid.Column="0" Grid.Row="3"/>
-                            <TextBox 
+                            <TextBox Text="{Binding NewDishFats, UpdateSourceTrigger=PropertyChanged}"
                                 Grid.Column="1" Grid.Row="3"/>
                             <TextBlock Text="Carbohydrates: "
                                        Grid.Column="0" Grid.Row="4"/>
-                            <TextBox 
+                            <TextBox Text="{Binding NewDishCarbohydrates, UpdateSourceTrigger=PropertyChanged}"
                                 Grid.Column="1" Grid.Row="4"/>
                             <TextBlock Text="Weight(grams): "
                                        Grid.Column="0" Grid.Row="5"/>
-                            <TextBox Text="100"
+                            <TextBox x:Name="addWeight" Text="{Binding NewDishWeightGrams, UpdateSourceTrigger=PropertyChanged}"
                                 Grid.Column="1" Grid.Row="5"/>
                             <Button Content="Save" Width="80"
+                                    Command="{Binding CreateDishCommand}"
                                     Margin="0, 3"
                                     Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2"/>
                         </Grid>
@@ -115,7 +116,7 @@
                             </DockPanel>
                             <ListBox 
                                 SelectedIndex="0"
-                                 ItemsSource="{Binding FiltredDishes}"
+                                 ItemsSource="{Binding FiltredDishes, UpdateSourceTrigger=PropertyChanged}"
                                  DisplayMemberPath="Name"
                                  SelectedItem="{Binding SelectedDish}">
                             </ListBox>
@@ -123,7 +124,7 @@
                     </GroupBox>
                     <GroupBox Grid.Column="1" Grid.Row="0" 
                               Grid.RowSpan="2" Header="{Binding SelectedDish.Name, FallbackValue='Select Dish'}">
-                        <Grid>
+                        <Grid Margin="0, 3">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
@@ -131,7 +132,7 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="12*"/>
-                                <RowDefinition/>
+                                <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
