--- a/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
+++ b/CaloriesPFC_Calculator_WPF/Views/Windows/MainWindow.xaml
@@ -272,19 +272,24 @@
                             </Grid.RowDefinitions>
                             <TextBlock Text="Age:"
                                 Grid.Column="0" Grid.Row="0"/>
-                            <TextBox Grid.Column="1" Grid.Row="0"/>
+                            <TextBox Grid.Column="1" Grid.Row="0"
+                                     Text="{Binding Calculator.Age}"/>
                             <TextBlock Text="Height(Cm):"
                                 Grid.Column="0" Grid.Row="1"/>
-                            <TextBox Grid.Column="1" Grid.Row="1"/>
+                            <TextBox Grid.Column="1" Grid.Row="1"
+                                     Text="{Binding Calculator.HeightCm}"/>
                             <TextBlock Text="Weight(Kg):" 
                                 Grid.Column="0" Grid.Row="2"/>
-                            <TextBox Grid.Column="1" Grid.Row="2"/>
+                            <TextBox Grid.Column="1" Grid.Row="2"
+                                     Text="{Binding Calculator.WeightKg}"/>
                             <TextBlock Text="Sex:"
                                 Grid.Column="0" Grid.Row="3"/>
-                            <ComboBox Grid.Column="1" Grid.Row="3"/>
+                            <ComboBox Grid.Column="1" Grid.Row="3"
+                                      ItemsSource="{Binding Calculator.Sex}"/>
                             <TextBlock Text="PhysicalActivities:" 
                                 Grid.Column="0" Grid.Row="4"/>
-                            <ComboBox Grid.Column="1" Grid.Row="4"/>
+                            <ComboBox Grid.Column="1" Grid.Row="4"
+                                      ItemsSource="{Binding Calculator.PhysicalActivity}"/>
                             <Button Content="Calculate"
                                     Grid.Column="0" Grid.Row="5"/>
                             <Button Content="Cancel"
